--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-7-oracle">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -13,5 +14,15 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-aop-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-aspects-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-beans-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-context-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-core-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-expression-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-jdbc-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/commons_logging/commons-logging-1.1.3/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/spring/antlr-3.0.1.jar"/>
+	<classpathentry kind="lib" path="/home/abhinav/database_jars/mysql-connector-java-5.1.25/mysql-connector-java-5.1.25-bin.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
