--- a/.classpath
+++ b/.classpath
@@ -14,40 +14,18 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-aspects-4.0.0.M1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-context-4.0.0.M1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/abhinav/commons_logging/commons-logging-1.1.3/commons-logging-1.1.3.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/abhinav/spring/antlr-3.0.1.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/abhinav/database_jars/mysql-connector-java-5.1.25/mysql-connector-java-5.1.25-bin.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-orm-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-tx-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-web-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/org.springframework.transaction.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-beans-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-context-support-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-core-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-jdbc-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-jms-4.0.0.M1.jar"/>
-	<classpathentry kind="lib" path="/home/abhinav/spring/spring-framework-4.0.0.M1/libs/spring-test-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/json-rpc-1.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/transaction-api-1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.25-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-jdbc-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-tx-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-context-support-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-core-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-api-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-tests.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-beans-4.0.0.M1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring-expression-4.0.0.M1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
